--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -711,13 +711,13 @@ section.lazy-placeholder:after {
   opacity: 0.3;
 }
 .cid-s7CBjZJLlW .navbar {
-  background: #ffffff;
+  background: #161719;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
 .cid-s7CBjZJLlW .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #161719;
 }
 .cid-s7CBjZJLlW a {
   font-style: normal;
@@ -808,7 +808,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-s7CBjZJLlW .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #161719;
   visibility: hidden;
   display: block;
   position: absolute;
@@ -957,6 +957,11 @@ section.lazy-placeholder:after {
 .cid-s7CBjZJLlW .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-s7CBjZJLlW .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-s7CBjZJLlW .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-s7CBjZJLlW .collapsed button.navbar-toggler {
   display: block;
@@ -1191,6 +1196,73 @@ section.lazy-placeholder:after {
 }
 .cid-s7CKsQRoQE H2 {
   text-align: center;
+}
+.cid-s7IWuysktB {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s7IWuysktB .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-s7IWuysktB h4 {
+  font-weight: 500;
+}
+.cid-s7IWuysktB p {
+  color: #232323;
+}
+.cid-s7IWuysktB .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-s7IWuysktB .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-s7IWuysktB .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-s7IWuysktB .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-s7IWuysktB .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-s7IWuysktB .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-s7IWuysktB .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s7IWuysktB .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-s7IWuysktB .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-s7IWuysktB .cost {
+  text-decoration: line-through;
+  color: #767676;
 }
 .cid-s7CNgUdNYh {
   padding-top: 45px;
