--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1264,6 +1264,9 @@ section.lazy-placeholder:after {
   text-decoration: line-through;
   color: #767676;
 }
+.cid-s7IWuysktB .text1 {
+  color: #232323;
+}
 .cid-s7CNgUdNYh {
   padding-top: 45px;
   padding-bottom: 90px;
